src/tests/invalidframingconfig/data/xfoallowfromnoframeancestors.tmpl
<!DOCTYPE html>
<title>Invalid framing configuration</title>
X-Frame-Options ALLOW-FROM is set but there is no CSP frame-ancestors entry.